src/scss/stratifi/_app-forms.scss
.c-select-wrap.new-style-arrow:after {
  top: 19px;
  right: 15px;
}

.select-xs {

  .c-select-wrap {

    &:after {
      right: -22px !important;
    }

    .c-select {
      padding-top:20px;
      padding-bottom:20px;
      width: 170px;
      min-width: 170px;
    }
  }
}

.sign-up-field {
  height: 45px;
  border: 1px solid #E7E9EA;
  background-color: #F6F8F9;
  border-radius: 3px;
}

.password-tooltip{
  border-radius:1px;
  border: 1px solid #BCBFC4 !important;

  top:270px !important;
  left:1200px !important;
  width:190px;

  @media screen and (max-width: 1300px) {
    left:1000px !important;
  }
  @media screen and (max-width: 1165px) {
    top:260px !important;
    left:1000px !important;
  }
  @media screen and (max-width: 906px) {
    top:290px !important;
    left:300px !important;
  }
}


.password-tooltip.place-bottom::after,
.password-tooltip.place-top::after
 {
  border-color: #BCBFC4 transparent !important;
}

.checkmark-test{
  width:16px;
  height:16px;
  position:relative;
  right:3px;
  top:3px;
  fill:#394346;
}

.green-checkmark-test{
  width:16px;
  height:16px;
  position:relative;
  right:3px;
  top:3px;
  fill:#54CE1E;
}

.checkmark-span{
  position:relative;
  right:20px;
  width:12px;
  height:12px;
}

.tooltip-text {
  color: #394346;
  font-family: Roboto;
  font-size: 13px;
  font-weight: 300;
  line-height: 20px;
}

.green-tooltip-text{
  color: #54CE1E;
  font-family: Roboto;
  font-size: 13px;
  font-weight: 300;
  line-height: 20px;
}

.featured-header {
  color: #394346;
  font-family: Roboto;
  font-size: 22px;
  font-weight: bold;
  line-height: 0;
  margin:20px auto;
  padding-top:100px;
}

.sign-up-label {
  color: #394346;
  font-family: Roboto;
  font-size: 12px;
}

.prism-img{
  position:relative;
  height:430px;
  width:540px;
  bottom:0px;
  margin-top:30px;

  @media screen and (max-width: 1182px) {
    width:400px;
    height:325px;
  }
}

.sign-up-select {
  // height: 40px;
  width: 139px;
  outline:none;
  position:relative;
  bottom:6px;

  background-color: #F6F8F9;
}

.check-boxes{
  position:relative;
  margin-bottom:80px;
  margin-top:30px;
  text-align:left;
  margin-left:auto;
  margin-right:auto;
}

.check-bulletpoint{
  height: 30px;
  line-height: 30px;
  // position:relative;
  // margin:auto;
  // width:500px;
}

.list-content{
  display:-moz-inline-stack;
  display:inline-block;
  zoom:1;
  *display:inline;
  position:relative;
  margin:10px auto;
  top:1.3rem;
  list-style-type: none;

  position: relative; left: 50%;
  transform: translateX(-50%);
}

#container-table{
  display:flex;
  align-items:center;
  position:relative;
  top:-30px;
}

.signup-info-container{
  position:relative;
  margin-left:30px;
  margin-right:30px;
  width:50%;
  margin-top:60px;
  @media screen and (max-width: 1182px) {
    width:100%;
    top:0px
  }
  @media screen and (max-width: 906px) {
    width:100%;
    top:100px
  }
}

.button-wrap{
  width:80%;
}

.signup-title{
  color: #394346;
  font-family: Roboto;
  font-size: 29px;
  font-weight: bold;
  line-height: 36px;
}

.signup-container{
  position:relative;
  width:40%;
  z-index:11;
  top:0px;
  // margin-top:-70px;
  //
  // @media screen and (max-width:1186px){
  //   margin-top:-30px;
  // }
  @media screen and (max-width: 906px) {
    display:block;
    position:absolute;
    top:1000px;
    width:100%;
  }
}

.logo-container {
  position:relative;
  height: 120px;
  padding: 0;
  margin-left: 0;
  margin-right:0;
  display: -webkit-inline-box;
  display:-moz-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width:100%;
  padding-bottom:100px;
  max-height:150px;

}

.feature-footer{
  @media screen and (max-width: 906px) {
    display:block;
    position:absolute;
    top:1900px;
    width:100%;
  }
}

.logo-row {
  width: 80%;
}

.logo {
  display:inline-block;
  margin: auto;
  padding:20px;
}


.stretch-box {
  width: 100%;
  // display: inline-block;
  font-size: 0;
  line-height: 0
}

.signup-form{
  background-color:#fff;
  border:30px solid #fff;
  border-radius:5px;
  z-index:11;
  box-shadow: 0 3px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
  width:100%;
  height:100%;
  bottom:0px;
}

.description-header {
  position:relative;
  top:10px;
  bottom:10px;
  color: #394346;
  font-family: Roboto;
  font-size: 22px;
  font-weight: bold;
  line-height: 38px;
}

.image-header{
  max-width:600px;
}

.underline-decoration{
    color:#7C8C94;
    text-decoration:underline;
}

.terms_statement {
  color: #7C8C94;
  font-family: Roboto;
  font-size: 13px;
  line-height: 36px;
}

.checklist-description{
  position:relative;
  display:inline-block;
  word-wrap:break-word;
  margin-left:5px;
  color: #7C8C94;
  font-family: Roboto;
  font-size: 16px;
  line-height: 0;
}

.form {
  &-control {
    line-height: 1.15;
    border-color: $graphite-grayish-blue;
    box-shadow: $input-box-shadow;

    &:focus {
      border-color: $brand-primary;
    }

    &::placeholder {
      color: $gray-darkest;
      opacity: .6;
    }

    &.new-style {
      box-shadow: none;
      border-width: 2px;
      padding: .6rem .75rem;
    }

    .editable-fields & {
      &:not(.c-select) {
        padding: 0;
        border: 0;
        line-height: 1.5;
        box-shadow: none;
      }
    }
  }

  &-group {
    label {
      letter-spacing: 1.4px;
      font-size: $font-size-sm;
      color: $gray-darkest;
    }

    .table & {
      margin-bottom: 0;
    }

    &.search {
      .form-control {
        padding-left: 2.1875rem;
      }

      > div {
        position: relative;
      }

      .icon-search, .icon-search_icn {
        position: absolute;
        top: 9px;
        left: 13px;
        color: $graphite-grayish-blue;
      }

      &-flat {
        .form-control {
          border: none;
          box-shadow: none;
        }

        .icon-search {
          top: 5px;
          left: 0;
        }
      }
    }
  }
}

